test_files/sample.py
def main():
    print("Hello")
    os.listdir(".") # E: undefined name 'os'